Changes made to array formatting and comments fixed for test class